--- a/index.html
+++ b/index.html
@@ -34,22 +34,20 @@
                 </p>
             </div>
             <br>
-            <div class="text" id="news" align="center">
+            <div class="text" style="width: 91%; margin: auto; height: 400px;">
                 <h2>News</h2>
-
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga numquam ipsum, enim quo voluptatum cupiditate quaerat maxime ducimus expedita debitis laborum? Odit natus alias iste voluptatem. Fuga, ad nulla.
-                </p>
+                <embed class="news" src="/news_1.html" style="height: 225px;">
+                <embed class="news" src="/news_2.html" style="height: 135px;">
             </div>
 
-            <a id="link" href="page2.html">page 2</a>
+            <a id="s_change" href="page2.html" style="display: block;">page 2</a>
         </div>
 
 
         <hr color="black">
         <div class="imp">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum, modi recusandae. Iure vero, accusamus quae ullam pariatur animi laboriosam omnis eos non libero rem doloribus nihil in veniam perspiciatis aperiam!
+                Impressum and shit
             </p>
         </div>
         
