changed css pos and bugs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
             <title>Kiwicat0_0</title>
 
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="assets/style.css">
 
             <meta charset="UTF-8">
             <meta name="describtion" content="What the Fuck">
@@ -36,8 +36,8 @@
             <br>
             <div class="text" style="width: 91%; margin: auto; height: 400px;">
                 <h2>News</h2>
-                <embed class="news" src="/news_1.html" style="height: 225px;">
-                <embed class="news" src="/news_2.html" style="height: 135px;">
+                <embed class="news" src="/news_1.html" style="height: 50%;">
+                <embed class="news" src="/news_2.html" style="height: 30%;">
             </div>
 
             <a id="s_change" href="page2.html" style="display: block;">page 2</a>
