--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
             <title>Kiwicat0_0</title>
 
-            <link rel="stylesheet" href="assets/style.css">
+            <link rel="stylesheet" href="assets/css/style.css">
 
             <meta charset="UTF-8">
             <meta name="describtion" content="What the Fuck">
@@ -24,11 +24,11 @@
                 <h2>About Me</h2>
                 <p>
                     Hi, I am A Programmer and also a small 
-                    <a id="link" href="https://twitch.tv/Kiwicat0_0" target="_blank" title="twitch">
+                    <a class="link" id="link" href="https://twitch.tv/Kiwicat0_0" target="_blank" title="twitch">
                         streamer
                     </a>
                     /
-                    <a id="link" href="https://youtube.com/@Kiwicat0_0" target="_blank" title="youtube">
+                    <a class="link" id="link" href="https://youtube.com/@Kiwicat0_0" target="_blank" title="youtube">
                         youtuber.
                     </a> 
                 </p>
@@ -36,11 +36,11 @@
             <br>
             <div class="text" style="width: 91%; margin: auto; height: 400px;">
                 <h2>News</h2>
-                <embed class="news" src="/news_1.html" style="height: 50%;">
-                <embed class="news" src="/news_2.html" style="height: 30%;">
+                <embed class="news" src="/news/news_1.html" style="height: 50%;">
+                <embed class="news" src="/news/news_2.html" style="height: 50%;">
             </div>
 
-            <a id="s_change" href="page2.html" style="display: block;">page 2</a>
+            <a class="link" id="s_change" href="page2.html" style="display: block;">page 2</a>
         </div>
 
 
