--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
         <!--Hello-->
         <h1 id="title" >Kiwicat0_0</h1>
+        <a href="/catalonia/" id="cat" class="link">Catalonia</a>
+        <br>
         <hr color="black">
         <div id="main">
             <div class="text" id="me" align="center">
@@ -27,14 +29,14 @@
                     <a class="link" id="link" href="https://twitch.tv/Kiwicat0_0" target="_blank" title="twitch">
                         streamer
                     </a>
-                    /
+                     / 
                     <a class="link" id="link" href="https://youtube.com/@Kiwicat0_0" target="_blank" title="youtube">
                         youtuber.
                     </a> 
                 </p>
             </div>
             <br>
-            <div class="text" style="width: 91%; margin: auto; height: 400px;">
+            <div class="text" id="newsb" style="width: 91%; margin: auto; height: 400px;">
                 <h2>News</h2>
                 <embed class="news" src="/news/news_1.html" style="height: 50%;">
                 <embed class="news" src="/news/news_2.html" style="height: 50%;">
