--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             <link rel="stylesheet" href="assets/css/style.css">
 
             <meta charset="UTF-8">
-            <meta name="describtion" content="What the Fuck">
-            <meta name="keywords" content="Kiwicat0_0,KiwiCat,VTubing,wtf">
+            <meta name="describtion" content="Kiwicat0_0 is a twitch streamer and youtuber and this is her website">
+            <meta name="keywords" content="Kiwicat0_0, KiwiCat, VTubing">
             <meta name="author" content="Kiwicat0_0">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -17,6 +17,7 @@
 
         <!--Hello-->
         <h1 id="title" >Kiwicat0_0</h1>
+        <p style="display: inline;">go visit </p>
         <a href="/catalonia/" id="cat" class="link">Catalonia</a>
         <br>
         <hr color="black">
@@ -38,18 +39,19 @@
             <br>
             <div class="text" id="newsb" style="width: 91%; margin: auto; height: 400px;">
                 <h2>News</h2>
-                <embed class="news" src="/news/news_1.html" style="height: 50%;">
+                <embed class="news" src="/news/news_3.html" style="height: 50%;">
                 <embed class="news" src="/news/news_2.html" style="height: 50%;">
+                <embed class="news" src="/news/news_1.html" style="height: 50%;">
+                
             </div>
 
-            <a class="link" id="s_change" href="page2.html" style="display: block;">page 2</a>
         </div>
 
 
         <hr color="black">
         <div class="imp">
             <p>
-                Impressum and shit
+                <a class="link" href="mailto:kiwicat@kiwicat.cat">kiwicat@kiwicat.cat</a> for business 
             </p>
         </div>
         
