news 4 and better imgs

--- a/catalonia/index.html
+++ b/catalonia/index.html
@@ -23,7 +23,7 @@ I like the idea of keeping cultures and languages alive, especially ones that ma
 M’agrada la idea de mantenir vives les cultures i les llengües, sobretot aquelles que fan que la gent se senti orgullosa del seu origen. Aquesta pàgina és només una petita manera de mostrar el meu reconeixement per això.
         </div>
 
-        <img src="https://cdn.discordapp.com/attachments/1358079145787003066/1434890513991073915/xu1RA9I.png?ex=6909f96d&is=6908a7ed&hm=6a8ce0ae6bb3ee7d23d4c3003f60e2dee39f089fd967ff3643951481fc5901f2&" width="30%" style="margin-left: 35%;">
+        <img src="/assets/images/catalonia.png" width="30%" style="margin-left: 35%;">
     </div>
 </body>
 </html>
