--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
             <meta name="keywords" content="Kiwicat0_0, KiwiCat, VTubing">
             <meta name="author" content="Kiwicat0_0">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+            <!-- Open Graph (für Discord, Facebook usw.) -->
+            <meta property="og:title" content="Kiwicat – Streamerin & Minecraft Creator">
+            <meta property="og:description" content="Offizielle Website mit Streams, Projekten & Kontakt!">
+            <meta property="og:image" content="https://deine-domain.de/images/embed-banner.png">
+            <meta property="og:url" content="https://deine-domain.de">
+            <meta property="og:type" content="website">
+
+            <!-- Twitter Card -->
+            <meta name="twitter:card" content="summary_large_image">
+            <meta name="twitter:title" content="Kiwicat – Streamerin & Minecraft Creator">
+            <meta name="twitter:description" content="Offizielle Website mit Streams, Projekten & Kontakt!">
+            <meta name="twitter:image" content="https://deine-domain.de/images/embed-banner.png">
     </head>
     <body>
 
@@ -37,8 +50,9 @@
                 </p>
             </div>
             <br>
-            <div class="text" id="newsb" style="width: 91%; margin: auto; height: 400px;">
+            <div class="text" id="newsb" style="width: 91%; margin: auto; height: 130%;">
                 <h2>News</h2>
+                <embed class="news" src="/news/news_4.html" style="height: 50%;">
                 <embed class="news" src="/news/news_3.html" style="height: 50%;">
                 <embed class="news" src="/news/news_2.html" style="height: 50%;">
                 <embed class="news" src="/news/news_1.html" style="height: 50%;">
