--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
             <!-- Open Graph (für Discord, Facebook usw.) -->
-            <meta property="og:title" content="Kiwicat – Streamerin & Minecraft Creator">
-            <meta property="og:description" content="Offizielle Website mit Streams, Projekten & Kontakt!">
-            <meta property="og:image" content="https://deine-domain.de/images/embed-banner.png">
-            <meta property="og:url" content="https://deine-domain.de">
+            <meta property="og:title" content="Kiwicat – Streamer & Youtuber">
+            <meta property="og:description" content="Official Kiwicat0_0 website with news and stuff!">
+            <meta property="og:image" content="https://kiwicat.cat/assets/images/channels4_banner.jpg">
+            <meta property="og:url" content="https://kiwicat.cat">
             <meta property="og:type" content="website">
 
             <!-- Twitter Card -->
             <meta name="twitter:card" content="summary_large_image">
-            <meta name="twitter:title" content="Kiwicat – Streamerin & Minecraft Creator">
-            <meta name="twitter:description" content="Offizielle Website mit Streams, Projekten & Kontakt!">
-            <meta name="twitter:image" content="https://deine-domain.de/images/embed-banner.png">
+            <meta name="twitter:title" content="Kiwicat – Streamer and Youtuber">
+            <meta name="twitter:description" content="Official Kiwicat0_0 website with news and stuff!">
+            <meta name="twitter:image" content="https://kiwicat.cat/assets/images/channels4_banner.jpg">
     </head>
     <body>
 
