reviews and QoL

--- a/catalonia/index.html
+++ b/catalonia/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/assets/css/style.css"
 </head>
 <body>
+    <a href="/">
+        <img id="kiwi_review" class="icons" src="/assets/images/avatar.webp" width="100">
+    </a>
     <h1 id="title">Catalonia</h1>
     <hr color="black">
 
