--- a/games/reviews/index.html
+++ b/games/reviews/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>reviews by Kiwicat</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
+    <a href="/">
+        <img id="kiwi_review" class="icons" src="/assets/images/avatar.webp" width="100">
+    </a>
+    <h1 id="title">Reviews</h1>
     
+    <hr color="black">
+
+    <div id="main">
+        <div class="text" id="newsb" style="height: 100%; margin: auto;" >
+            <embed class="news" src="/reviews/Split_Fiction.html" style="height: 300px;">
+            
+            <embed class="news" src="/reviews/Cult_Of_The_Lamb.html" style="height: 70%;">
+            <embed class="news" src="/reviews/PEAK.html" style="height: 300px;">
+        </div>
+    </div>
 </body>
 </html>
