--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <div class="text" id="me" align="center">
                 <img id="kiwi" class="icons" src="/assets/images/avatar.webp" width="100">
                 <h2>About Me</h2>
+                <a class="link" id="s_change" href="/games/" style="margin: auto; width: 10%; float: right;">Games</a>
+
                 <p>
                     Hi, I am A Programmer and also a small 
                     <a class="link" id="link" href="https://twitch.tv/Kiwicat0_0" target="_blank" title="twitch">
@@ -49,6 +51,7 @@
                     </a> 
                 </p>
             </div>
+            <br>
             <br>
             <div class="text" id="newsb" style="width: 91%; margin: auto; height: 130%;">
                 <h2>News</h2>
