--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="text" id="me" align="center">
                 <img id="kiwi" class="icons" src="/assets/images/avatar.webp" width="100">
                 <h2>About Me</h2>
-                <a class="link" id="s_change" href="/games/" style="margin: auto; width: 10%; float: right;">Games</a>
+                <a class="link" id="s_change" href="/games/" style="margin: auto; width: 10%; min-width: fit-content; float: right;">Games</a>
 
                 <p>
                     Hi, I am A Programmer and also a small 
