--- a/games/reviews/index.html
+++ b/games/reviews/index.html
@@ -17,7 +17,8 @@
     <div id="main">
         <div class="text" id="newsb" style="height: 100%; margin: auto;" >
             <embed class="news" src="/reviews/Split_Fiction.html" style="height: 300px;">
-            
+            <embed class="news" src="/reviews/What_the_Golf.html" style="height: 155px;">
+
             <embed class="news" src="/reviews/Cult_Of_The_Lamb.html" style="height: 70%;">
             <embed class="news" src="/reviews/PEAK.html" style="height: 300px;">
         </div>
