--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <head>
             <title>Kiwicat0_0</title>
 
+            <script src="https://kit.fontawesome.com/1c457c6875.js" crossorigin="anonymous"></script>
+
             <link rel="stylesheet" href="assets/css/style.css">
 
             <meta charset="UTF-8">
@@ -29,28 +31,42 @@
     <body>
 
         <!--Hello-->
-        <h1 id="title" >Kiwicat0_0</h1>
+        <div class="dropdown">
+            <button>Pages</button>
+            <div class="content">
+                <a class="link" href="/games/reviews/">Reviews</a>
+                <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
+                <a class="link" href="/catalonia/">Catalonia</a>
+            </div>
+        </div>
+        <header><h1 id="title" >Kiwicat0_0</h1></header>
+        
         <p style="display: inline;">go visit </p>
         <a href="/catalonia/" id="cat" class="link">Catalonia</a>
         <br>
         <hr color="black">
         <div id="main">
-            <div class="text" id="me" align="center">
-                <img id="kiwi" class="icons" src="/assets/images/avatar.webp" width="100">
-                <h2>About Me</h2>
-                <a class="link" id="s_change" href="/games/" style="margin: auto; width: 10%; min-width: fit-content; float: right;">Games</a>
+            <section>
+                <div class="text" id="me" align="center">
+                    <img id="kiwi" class="icons" src="/assets/images/avatar.webp" width="100">
+                    <i class="fa-brands fa-twitch" style="display: inline;"></i>
+                    <h2 style="display: inline;">About Me</h2>
+                    <i class="fa-brands fa-youtube" style="display: inline;"></i>
 
-                <p>
-                    Hi, I am A Programmer and also a small 
-                    <a class="link" id="link" href="https://twitch.tv/Kiwicat0_0" target="_blank" title="twitch">
-                        streamer
-                    </a>
-                     / 
-                    <a class="link" id="link" href="https://youtube.com/@Kiwicat0_0" target="_blank" title="youtube">
-                        youtuber.
-                    </a> 
-                </p>
-            </div>
+                    <a class="link" id="s_change" href="/games/" style="margin: auto; width: 10%; min-width: fit-content; float: right;">Games</a>
+
+                    <p>
+                        Hi, I am A Programmer and also a small 
+                        <a class="link" id="link" href="https://twitch.tv/Kiwicat0_0" target="_blank" title="twitch">
+                            streamer
+                        </a>
+                        / 
+                        <a class="link" id="link" href="https://youtube.com/@Kiwicat0_0" target="_blank" title="youtube">
+                            youtuber.
+                        </a> 
+                    </p>
+                </div>
+            </section>
             <br>
             <br>
             <div class="text" id="newsb" style="width: 91%; margin: auto; height: 130%;">
@@ -66,11 +82,13 @@
 
 
         <hr color="black">
-        <div class="imp">
-            <p>
-                <a class="link" href="mailto:kiwicat@kiwicat.cat">kiwicat@kiwicat.cat</a> for business 
-            </p>
-        </div>
+        <footer>
+            <div class="imp">
+                <p>
+                    <a class="link" href="mailto:kiwicat@kiwicat.cat">kiwicat@kiwicat.cat</a> for business 
+                </p>
+            </div>
+        </footer>
         
 
     </body>
