--- a/games/index.html
+++ b/games/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/1c457c6875.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games</title>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
+    <div class="dropdown">
+        <button>Pages</button>
+         <div class="content">
+            <a class="link" href="/games/reviews/">Reviews</a>
+            <a class="link" href="/">Main</a>
+            <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
+            <a class="link" href="/catalonia/">Catalonia</a>
+        </div>
+    </div>
     <h1 id="title">Games</h1>
     <hr color="black">
 
