--- a/games/reviews/index.html
+++ b/games/reviews/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/1c457c6875.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reviews by Kiwicat</title>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
+    <div class="dropdown">
+        <button>Pages</button>
+         <div class="content">
+            <a class="link" href="/">Main</a>
+            <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
+            <a class="link" href="/catalonia/">Catalonia</a>
+        </div>
+    </div>
     <a href="/">
         <img id="kiwi_review" class="icons" src="/assets/images/avatar.webp" width="100">
     </a>
