changed small stuff

--- a/cat/index.html
+++ b/cat/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat</title>
+    <meta name="robots" content="noindex, nofollow">
+
 </head>
 <body>
-    <img src="https://cdn.discordapp.com/attachments/1358079145787003066/1434467456554111109/IMG_4618.jpg?ex=69086f6c&is=69071dec&hm=1ffe6f430044ad7c207d67fe82828f9aceed2e51d4b240fe95eba52d2a1632a5&" width="100%">
+    <img src="/assets/images/Frodo.jpg" width="100%">
 </body>
 </html>
