--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiwicat0_0</title>
     <link rel="stylesheet" href="/assets/css/style.css"> 
+    <meta name="robots" content="noindex, nofollow">
+
 </head>
 <body>
     <h1 id="title">This is page 2</h1>
