--- a/reviews/What_the_Golf.html
+++ b/reviews/What_the_Golf.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="robots" content="noindex, nofollow">
+
 </head>
 <body>
     <div align="center">
