--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <meta name="author" content="Kiwicat0_0">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-            <!-- Open Graph (für Discord, Facebook usw.) -->
+            <!-- Open Graph -->
             <meta property="og:title" content="Kiwicat – Streamer & Youtuber">
             <meta property="og:description" content="Official Kiwicat0_0 website with news and stuff!">
             <meta property="og:image" content="https://kiwicat.cat/assets/images/channels4_banner.jpg">
