--- a/catalonia/index.html
+++ b/catalonia/index.html
@@ -19,7 +19,7 @@
     <a href="/">
         <img id="kiwi_review" class="icons" src="/assets/images/avatar.webp" width="100">
     </a>
-    <h1 id="title">Catalonia</h1>
+    <h1 class="title">Catalonia</h1>
     <hr color="black">
 
     <div id="main">
