--- a/discord/index.html
+++ b/discord/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://discord.com/invite/3Qk3VCrgSP">
+  <meta id="dc" http-equiv="refresh" content="0; url=https://discord.com/invite/3Qk3VCrgSP">
 </head>
 <body>
-  <p>If your Browser does'nt redirect you: <a href="https://discord.com/invite/3Qk3VCrgSP">Link</a>.</p>
+  <p>If your Browser does'nt redirect you: <a id="dc_re" href="https://discord.com/invite/3Qk3VCrgSP">Link</a>.</p>
+
+  
 </body>
 </html>
 
