--- a/games/index.html
+++ b/games/index.html
@@ -17,7 +17,7 @@
             <a class="link" href="/catalonia/">Catalonia</a>
         </div>
     </div>
-    <h1 id="title">Games</h1>
+    <h1 class="title">Games</h1>
     <hr color="black">
 
     <div id="main">
