--- a/games/reviews/index.html
+++ b/games/reviews/index.html
@@ -19,7 +19,7 @@
     <a href="/">
         <img id="kiwi_review" class="icons" src="/assets/images/avatar.webp" width="100">
     </a>
-    <h1 id="title">Reviews</h1>
+    <h1 class="title">Reviews</h1>
     
     <hr color="black">
 
