--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body align="center">
+    <div class="dropdown">
+        <button>Pages</button>
+         <div class="content">
+            <a class="link" href="/games/reviews/">Reviews</a>
+            <a class="link" href="/">Main</a>
+            <a class="link" href="/catalonia/">catalonia</a>
+            <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
+        </div>
+    </div>
     <h1 class="title">KiwiCalc</h1>
     <hr color="black">
 
