--- a/games/index.html
+++ b/games/index.html
@@ -13,6 +13,7 @@
          <div class="content">
             <a class="link" href="/games/reviews/">Reviews</a>
             <a class="link" href="/">Main</a>
+            <a class="link" href="/calculator/">Calculator</a>
             <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
             <a class="link" href="/catalonia/">Catalonia</a>
         </div>
