--- a/games/reviews/index.html
+++ b/games/reviews/index.html
@@ -12,6 +12,7 @@
         <button>Pages</button>
          <div class="content">
             <a class="link" href="/">Main</a>
+            <a class="link" href="/calculator/">Calculator</a>
             <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
             <a class="link" href="/catalonia/">Catalonia</a>
         </div>
