--- a/catalonia/index.html
+++ b/catalonia/index.html
@@ -11,6 +11,7 @@
     <div class="dropdown">
         <button>Pages</button>
          <div class="content">
+            <a class="link" href="/calculator/">Calculator</a>
             <a class="link" href="/games/reviews/">Reviews</a>
             <a class="link" href="/">Main</a>
             <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
