--- a/calculator/index.html
+++ b/calculator/index.html
@@ -6,7 +6,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-<body align="center">
+<body>
     <div class="dropdown">
         <button>Pages</button>
          <div class="content">
@@ -19,7 +19,7 @@
     <h1 class="title">KiwiCalc</h1>
     <hr color="black">
 
-    <div class="calculator">
+    <div class="calculator" align="center">
         <p id="c_in"></p>
 
         <div class="c_row" id="top_row">
