--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
                 <a class="link" href="/catalonia/">Catalonia</a>
                 <a class="link" href="/calculator/">Calculator</a>
+                <a class="link" href="/pokemon/">Pokemon Data</a>
             </div>
         </div>
         <header><h1 class="title" style="display: inline;">Kiwicat0_0</h1></header>
