--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -15,9 +15,9 @@
         <img src="" alt="Pokemon Sprite" id="pokemon_sprite" style="display: none;">
 
 
-        <h3 id="name"></h3>
-        <p id="moves"></p>
-        <p id="types"></p>
+        <h3 class="info" id="name"></h3>
+        <p class="info" id="moves"></p>
+        <p class="info" id="types"></p>
 
         <script src="/assets/scripts/pokemon.js"></script>
 </body>
