--- a/games/index.html
+++ b/games/index.html
@@ -16,6 +16,7 @@
             <a class="link" href="/calculator/">Calculator</a>
             <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
             <a class="link" href="/catalonia/">Catalonia</a>
+            <a class="link" href="/pokemon/">Pokemon Data</a>
         </div>
     </div>
     <h1 class="title">Games</h1>
