--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <br>
             <div class="text" id="newsb" style="width: 91%; margin: auto; height: 130%;">
                 <h2>News</h2>
+                <embed class="news" src="/news/news_6.html" style="height: 50%;">
                 <embed class="news" src="/news/news_5.html" style="height: 50%;">
                 <embed class="news" src="/news/news_4.html" style="height: 50%;">
                 <embed class="news" src="/news/news_3.html" style="height: 50%;">
