--- a/catalonia/index.html
+++ b/catalonia/index.html
@@ -15,6 +15,7 @@
             <a class="link" href="/games/reviews/">Reviews</a>
             <a class="link" href="/">Main</a>
             <a class="link" href="/pokemon/">Pokemon Data</a>
+            <a class="link" href="/news/">News</a>
             <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
         </div>
     </div>
