--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <a class="link" href="/catalonia/">Catalonia</a>
                 <a class="link" href="/calculator/">Calculator</a>
                 <a class="link" href="/pokemon/">Pokemon Data</a>
+                <a class="link" href="/news/">News</a>
                 <a class="link" href="/pronouns">Pronouns</a>
             </div>
         </div>
