--- a/games/reviews/index.html
+++ b/games/reviews/index.html
@@ -15,6 +15,7 @@
             <a class="link" href="/calculator/">Calculator</a>
             <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
             <a class="link" href="/catalonia/">Catalonia</a>
+            <a class="link" href="/news/">News</a>
             <a class="link" href="/pokemon/">Pokemon Data</a>
         </div>
     </div>
