--- a/games/index.html
+++ b/games/index.html
@@ -18,6 +18,7 @@
             <a class="link" href="/catalonia/">Catalonia</a>
             <a class="link" href="/news/">News</a>
             <a class="link" href="/pokemon/">Pokemon Data</a>
+            <a class="link" href="/minecraft/skins/">Skin Data</a>
         </div>
     </div>
     <h1 class="title">Games</h1>
