--- a/games/reviews/index.html
+++ b/games/reviews/index.html
@@ -17,6 +17,7 @@
             <a class="link" href="/catalonia/">Catalonia</a>
             <a class="link" href="/news/">News</a>
             <a class="link" href="/pokemon/">Pokemon Data</a>
+            <a class="link" href="/minecraft/skins/">Skin Data</a>
         </div>
     </div>
     <a href="/">
