--- a/minecraft/skins/index.html
+++ b/minecraft/skins/index.html
@@ -13,7 +13,7 @@
         <input id="skin_in" type="text" placeholder="Enter Username...">
         <button onclick="fetchData()" id="search">search</button>
         <br>
-        <img src="" alt="Pokemon Sprite" id="pokemon_sprite" style="display: none;">
+        <img src="" alt="Pokemon Sprite" id="skin_sprite" style="display: none;">
 
 
         <h3 class="info" id="name"></h3>
