--- a/minecraft/skins/index.html
+++ b/minecraft/skins/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft Skin Finder</title>
     <link rel="stylesheet" href="/assets/css/pokemon.css">
+    <meta id="embed" property="og:image" content="https://kiwicat.cat/assets/images/avatar.webm">
 </head>
 <body align="center">
     <a href="/" style="text-decoration: none;"><h1>KiwiData</h1></a>
