--- a/minecraft/skins/index.html
+++ b/minecraft/skins/index.html
@@ -15,8 +15,15 @@ $embedImage = $skin
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft Skin Finder</title>
     <link rel="stylesheet" href="/assets/css/pokemon.css">
-
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kiwicat.cat/minecraft/skins/?skin=<?php echo urlencode($skinEncoded); ?>">
+    <meta property="og:title" content="Minecraft Skin Finder">
+    <meta property="og:description" content="Kiwicat Data Skin Finder for Java">
     <meta property="og:image" content="<?php echo $embedImage; ?>">
+    <meta property="og:image:width" content="100">
+    <meta property="og:image:height" content="100">
+
+
 </head>
 <body align="center">
 
