--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
             <script src="https://kit.fontawesome.com/1c457c6875.js" crossorigin="anonymous"></script>
 
-            <link rel="stylesheet" href="assets/css/style.css">
+            <link rel="stylesheet" href="/assets/css/style.css">
 
             <meta charset="UTF-8">
             <meta name="describtion" content="Kiwicat0_0 is a twitch streamer and youtuber and this is her website">
