embeds for miezekater

--- a/miezekater/index.html
+++ b/miezekater/index.html
@@ -12,25 +12,25 @@
             <link rel="stylesheet" href="/assets/css/kater.css">
 
             <meta charset="UTF-8">
-            <meta name="describtion" content="Kiwicat0_0 is a twitch streamer and youtuber and this is her website">
-            <meta name="keywords" content="Kiwicat0_0, KiwiCat, VTubing">
+            <meta name="describtion" content="Miezekater Production macht gute Minecraft Kurzfilme">
+            <meta name="keywords" content="Miezekater, Minecraft, Kurzfilm">
             <meta name="author" content="Kiwicat0_0">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
             <!-- Open Graph -->
-            <meta property="og:title" content="Kiwicat – Streamer & Youtuber">
-            <meta property="og:description" content="Official Kiwicat0_0 website with news and stuff!">
-            <meta property="og:image" content="https://kiwicat.cat/assets/images/channels4_banner.jpg">
-            <meta property="og:url" content="https://kiwicat.cat">
+            <meta property="og:title" content="Miezekater Productions - Die besten Kurzfilme">
+            <meta property="og:description" content="Official Miezekater Productions Website">
+            <meta property="og:image" content="https://cdn.discordapp.com/avatars/754756599607984150/972fc35a116df096d1cc4770a0926762?size=1024">
+            <meta property="og:url" content="https://miezekater.kiwicat.cat">
             <meta property="og:type" content="website">
 
             <!-- Twitter Card -->
             <meta name="twitter:card" content="summary_large_image">
-            <meta name="twitter:title" content="Kiwicat – Streamer and Youtuber">
-            <meta name="twitter:description" content="Official Kiwicat0_0 website with news and stuff!">
-            <meta name="twitter:image" content="https://kiwicat.cat/assets/images/channels4_banner.jpg">
+            <meta name="twitter:title" content="Miezekater Productions - Die besten Kurzfilme">
+            <meta name="twitter:description" content="Official Miezekater Productions Website">
+            <meta name="twitter:image" content="https://cdn.discordapp.com/avatars/754756599607984150/972fc35a116df096d1cc4770a0926762?size=1024">
     </head>
-    <body on>
+    <body>
         
 
         <!--Hello-->
