--- a/catalonia/index.html
+++ b/catalonia/index.html
@@ -12,7 +12,7 @@
         <button>Pages</button>
          <div class="content">
             <a class="link" href="/calculator/">Calculator</a>
-            <a class="link" href="/games/reviews/">Reviews</a>
+            <a class="link" href="/reviews/">Reviews</a>
             <a class="link" href="/">Main</a>
             <a class="link" href="/pokemon/">Pokemon Data</a>
             <a class="link" href="/minecraft/skins/">Skin Data</a>
