--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="dropdown">
             <button>Pages</button>
             <div class="content">
-                <a class="link" href="/games/reviews/">Reviews</a>
+                <a class="link" href="/reviews/">Reviews</a>
                 <a class="link" href="/discord/"><i class="fa-brands fa-discord" style="color: #501fe2;"></i>Discord</a>
                 <a class="link" href="/catalonia/">Catalonia</a>
                 <a class="link" href="/calculator/">Calculator</a>
@@ -63,8 +63,6 @@
                     <i class="fa-brands fa-twitch" style="display: inline;"></i>
                     <h2 style="display: inline;">About Me</h2>
                     <i class="fa-brands fa-youtube" style="display: inline;"></i>
-
-                    <a class="link" id="s_change" href="/games/" style="margin: auto; width: 10%; min-width: fit-content; float: right;">Games</a>
 
                     <p>
                         Hi, I am A Programmer and also a small 
