--- a/reviews/Donkey_Kong_bananza.html
+++ b/reviews/Donkey_Kong_bananza.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="/assets/css/news.css">
+    <title>Donkey Kong Review</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 
     
 </head>
 <body>
-    <div class="text" id="news" align="center">
+    <a href="/reviews/" style="text-decoration: none;"><h1 class="title">Back</h1></a>
+    <div class="text" id="news" align="center"style="max-width: 700px; margin: auto; margin-top: 20px;">
         <h2>Donkey Kong Bananza</h2>
 
         <p>
-            The really nailed it again. The oddesey makers just can't not deliver.
-            The game is in many ways like oddesey from the stuff like mouvement and 
-            to the way they handle the dialoge system. Mario Oddesey was my first own Game so it holds a special place in my Heart.
+            The really nailed it again. The odyssey makers just can't not deliver.
+            The game is in many ways like odyssey from the stuff like mouvement and 
+            to the way they handle the dialoge system. Mario Odyssey was my first own Game so it holds a special place in my Heart.
             I played it so often and even started mod... 
             <br>
             <br>
