--- a/reviews/PEAK.html
+++ b/reviews/PEAK.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <meta name="robots" content="noindex, nofollow">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
     
 </head>
 <body>
-    <div class="text" id="news" align="center">
+    <a href="/reviews/" style="text-decoration: none;"><h1 class="title">Back</h1></a>
+
+    <div class="text" id="news" align="center" style="max-width: 700px; margin: auto; margin-top: 20px;">
         <h2>PEAK</h2>
 
         <p>
