--- a/reviews/Split_Fiction.html
+++ b/reviews/Split_Fiction.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="robots" content="noindex, nofollow">
+    <title>Split Fiction Review</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 
     
 </head>
 <body>
-    <div class="text" id="news" align="center">
+    <a href="/reviews/" style="text-decoration: none;"><h1 class="title">Back</h1></a>
+    <div class="text" id="news" align="center" style="max-width: 700px; margin: auto; margin-top: 20px;">
         <h2>Split Fiction</h2>
 
         <p>
@@ -17,7 +18,11 @@
             <br>
             <br>
 
-            The story was great and the gameplay perfect. I played it takes two and split fiction is just so much better (it takes two was great too). There are much more abilities and gameplay features than it takes two wich makes every level feel unique. The side stories are really fun and unique, i was actually sad when i got the „all side strories“ Achievement not because they were to less but because i couldn’t see more of what this studio can do. The game is really polished and well made, the effects are gorgeous and the graphics look amazing.
+            The story was great and the gameplay perfect.
+             I played it takes two and split fiction is just so much better (it takes two was great too).
+              There are much more abilities and gameplay features than it takes two wich makes every level feel unique.
+               The side stories are really fun and unique, i was actually sad when i got the „all side strories“ Achievement not because they were to less but because i couldn’t see more of what this studio can do. 
+               The game is really polished and well made, the effects are gorgeous and the graphics look amazing.
             <br>
             <br>
             The a bit bad:
