--- a/reviews/index.html
+++ b/reviews/index.html
@@ -7,19 +7,38 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <h1 class="title">Reviews by Kiwicat</h1>
+    <h1 class="title">Reviews by <a href="/" class="review_link" style="text-decoration: none; color:palevioletred;">Kiwicat</a></h1>
 
     <div id="main" class="text">
         <a href="/reviews/Cult_Of_The_Lamb.html" class="review_link">
             <div class="review" id="cult">
-                <img src="https://i.etsystatic.com/36789232/r/il/9bf6dd/4127628419/il_1588xN.4127628419_gkob.jpg" id="review_icon" class="icons">
+                <img src="/assets/images/cult_of_the_Lamb.jpg" id="review_icon" class="icons">
                 <p style="display: inline-block;">cult of the Lamb</p>
             </div>
         </a>
         <a href="/reviews/Donkey_Kong_bananza.html" class="review_link">
             <div class="review" id="Donkey_Kong_bananza" style="width: 250px">
-                <img src="https://assets.nintendo.eu/image/private/f_auto,c_limit,w_1920,q_auto:low/b60njbfu3yyzgckkk3ts" id="review_icon" class="icons">
+                <img src="/assets/images/donkey_kong_banaza.jpg" id="review_icon" class="icons">
                 <p style="display: inline-block;">Donkey Kong bananza</p>
+            </div>
+        </a>
+        <a href="/reviews/PEAK.html" class="review_link">
+            <div class="review" id="PEAK" style="width: 250px">
+                <img src="/assets/images/peak.jpg" id="review_icon" class="icons">
+                <p style="display: inline-block;">PEAK</p>
+            </div>
+        </a>
+        <br>
+        <a href="/reviews/Split_Fiction.html" class="review_link">
+            <div class="review" id="Split_Fiction" style="width: 250px;">
+                <img src="/assets/images/split_fiction.png" id="review_icon" class="icons" style="width: 50px;">
+                <p style="display: inline-block;">Split Fiction</p>
+            </div>
+        </a>
+        <a href="/reviews/What_the_Golf.html" class="review_link">
+            <div class="review" id="What_the_Golf" style="width: 250px;">
+                <img src="/assets/images/what_golf.png" id="review_icon" class="icons" style="width: 50px;">
+                <p style="display: inline-block;">What the Golf</p>
             </div>
         </a>
     </div>
