--- a/reviews/What_the_Golf.html
+++ b/reviews/What_the_Golf.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta name="robots" content="noindex, nofollow">
+    <title>What the Golf Review</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    
 
 </head>
 <body>
-    <div align="center">
+    <a href="/reviews/" style="text-decoration: none;"><h1 class="title">Back</h1></a>
+    <div align="center" class="text" id="news" style="max-width: 700px; margin: auto; margin-top: 20px;">
         <h2>What the Golf?</h2>
 
         <p>
