--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
     <head>
             <title>Kiwicat0_0</title>
@@ -12,6 +12,8 @@
             <link rel="stylesheet" href="/assets/css/style.css">
 
             <meta charset="UTF-8">
+
+
             <meta name="describtion" content="Kiwicat0_0 is a twitch streamer and youtuber and this is her website">
             <meta name="keywords" content="Kiwicat0_0, KiwiCat, VTubing">
             <meta name="author" content="Kiwicat0_0">
