--- a/minecraft/skins/index.html
+++ b/minecraft/skins/index.html
@@ -7,7 +7,7 @@
     <title>Minecraft Skin Finder</title>
     <link rel="stylesheet" href="/assets/css/pokemon.css">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://kiwicat.cat/minecraft/skins/?skin=<?php echo urlencode($skinEncoded); ?>">
+    <meta property="og:url" content="https://kiwicat.cat/minecraft/skins/">
     <meta property="og:title" content="Minecraft Skin Finder">
     <meta property="og:description" content="Kiwicat Data Skin Finder for Java">
     <meta property="og:image:width" content="100">
